--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@babel/runtime": "^7.15.3",
     "json-server": "^0.16.3",
+    "parcel": "^1.12.4",
     "react": "^0.14.0 || ^15.0.0 || ^16 || ^17",
     "react-dom": "^0.14.0 || ^15.0.0 || ^16 || ^17",
     "react-modal": "^3.14.3",
@@ -34,6 +35,6 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "babel-plugin-styled-components": "^1.13.2",
-    "parcel-bundler": "^1.12.5"
+    "parcel-bundler": "^1.9.4"
   }
 }
